tree-sitter-etamil/grammar.js
    source_file: ($) => repeat($._statement),

    // eTamil has line comments only. There is no block comment, which is why
    // a /* */ rule in an editor greys out code that then fails to lex.
    _statement: ($) =>
      choice(
        $.import_statement,
        $.function_definition,
        $.return_statement,
        $.if_statement,
        $.while_statement,
        $.for_each_statement,
        $.print_statement,
        $.input_statement,
        $.route_statement,
        $.response_statement,
        $.json_response_statement,
        $.every_statement,
        $.server_statement,
        $.file_statement,
        $.csv_statement,
        $.database_statement,
        $.shape_definition,
        $.declaration,
        $.typed_declaration,
        $.fixed_declaration,
        $.function_declaration,
        $.assignment,
        $.index_assignment,
        $.field_assignment,
        $.expression_statement,
      ),

    // இறக்கு "nUlakam/paNam.qmz";
    import_statement: ($) => seq(kw('Import'), field('path', $.string), ';'),

    // செயல் பெயர்(அளவுரு) { … }, with optional declared parameter and
    // return types: செயல் வரி(எண் தொகை) எண் { … }
    function_definition: ($) =>
      seq(
        kw('Function'),
        field('name', $.identifier),
        field('parameters', $.parameter_list),
        field('return_type', optional($._return_type)),
        field('body', $.block),
      ),

    // A type keyword, `செயல்` for a function, or a shape's name.
    _return_type: ($) => choice($.type, $.function_type, $.identifier),

    function_type: () => kw('Function'),

    parameter_list: ($) => seq('(', commaSep($.parameter), ')'),

    // `x`, `எண் x`, `செயல் மாற்று`, `கடன் க` (a shape), `நிலை x`, and
    // `நிலை எண் x`. Two names in a row are a shape and a name, or நிலை and a
    // name; which one is the compiler's business and the reader's, not the
    // parser's.
    parameter: ($) =>
      choice(
        field('name', $.identifier),
        seq(field('type', choice($.type, $.function_type)), field('name', $.identifier)),
        seq(field('type', $.identifier), field('name', $.identifier)),
        seq(
          field('modifier', $.identifier),
          field('type', choice($.type, $.function_type, $.identifier)),
          field('name', $.identifier),
        ),
      ),

    // வடிவம் கடன் { எண் அசல், எண் வீதம், செயல் வட்டி(இது) எண் { … } }
    shape_definition: ($) =>
      seq(
        field('keyword', $.identifier),
        field('name', $.identifier),
        '{',
        repeat(choice(seq($.shape_field, optional(',')), $.function_definition)),
        '}',
      ),

    // Two names are always a type and a name: fields are separated by commas,
    // so `எண் அசல்` cannot be two fields.
    shape_field: ($) =>
      prec.right(
        seq(
          field('type', optional(choice($.type, $.function_type, $.identifier))),
          field('name', $.identifier),
        ),
      ),

    return_statement: ($) =>
      seq(kw('Return'), field('value', optional($._expression)), ';'),

    // The condition precedes the keyword. This is the shape most editor
    // integrations get backwards.
    if_statement: ($) =>
      seq(
        '(',
        field('condition', $._expression),
        ')',
        kw('If'),
        field('consequence', $.block),
        optional(seq(kw('Else'), field('alternative', $.block))),
      ),

    while_statement: ($) =>
      seq(
        '(',
        field('condition', $._expression),
        ')',
        kw('Loop'),
        field('body', $.block),
      ),

    // ஒவ்வொரு உறுப்பு இல் வரிசை { … }
    for_each_statement: ($) =>
      seq(
        kw('ForEach'),
        field('variable', $.identifier),
        kw('In'),
        field('collection', $._expression),
        field('body', $.block),
      ),

    print_statement: ($) => seq(kw('Print'), field('value', $._expression), ';'),

    route_statement: ($) =>
      seq(
        kw('Route'),
        field('method', $.http_method),
        ',',
        field('path', $.string),
        field('handler', $.block),
      ),

    http_method: () =>
      choice(
        kw('HttpGet'),
        kw('HttpPost'),
        kw('HttpPut'),
        kw('HttpDelete'),
        kw('HttpPatch'),
        kw('HttpOptions'),
        kw('HttpHead'),
      ),

    // பதில் 200, உடல், {"Content-Type": "text/html"};
    response_statement: ($) =>
      seq(
        kw('Response'),
        field('status', $._expression),
        ',',
        field('body', $._expression),
        optional(seq(',', field('headers', $._expression))),
        ';',
      ),

    // ஜேசான்_உரை "{...}", 200;
    json_response_statement: ($) =>
      seq(
        kw('JSONBody'),
        field('body', $._expression),
        optional(seq(',', field('status', $._expression))),
        ';',
      ),

    // இடைவெளி 600 { … } — run this block every N seconds. A background task
    // rather than a loop: it takes a block and no condition.
    every_statement: ($) =>
      seq(
        kw('Every'),
        field('interval', $._expression),
        field('body', $.block),
      ),

    file_statement: ($) =>
      choice(
        seq(
          kw('FileOpen'),
          field('path', $._expression),
          optional(seq(',', field('mode', $._expression))),
          ';',
        ),
        seq(kw('FileClose'), field('path', $._expression), ';'),
        seq(
          kw('FileRead'),
          field('path', $._expression),
          ',',
          field('target', $.identifier),
          ';',
        ),
        seq(
          kw('FileWrite'),
          field('path', $._expression),
          ',',
          field('data', $._expression),
          ';',
        ),
      ),

    csv_statement: ($) =>
      choice(
        seq(
          kw('ReadCSV'),
          field('path', $._expression),
          ',',
          field('target', $.identifier),
          ';',
        ),
        seq(
          kw('WriteCSV'),
          field('path', $._expression),
          ',',
          field('row', $._expression),
          ';',
        ),
      ),

    // The database backend is the host's name for a driver, not a name the
    // author invented, so it keeps its canonical spelling.
    database_backend: () =>
      choice(
        kw('SQLite'),
        kw('PostgreSQL'),
        kw('MySQL'),
        kw('MongoDB'),
        kw('Redis'),
        kw('JSONdb'),
        kw('SQL'),
        kw('NoSQL'),
      ),

    // Queries are always parameterised: there is deliberately no way to
    // splice a value into SQL text from eTamil.
    database_statement: ($) =>
      choice(
        seq(
          kw('DBConnect'),
          field('backend', $.database_backend),
          ',',
          field('connection', $._expression),
          ';',
        ),
        seq(kw('DBDisconnect'), field('backend', $.database_backend), ';'),
        seq(
          kw('DBQuery'),
          field('sql', $._expression),
          ',',
          field('parameters', $._expression),
          ',',
          field('target', $.identifier),
          ';',
        ),
        seq(
          kw('DBExecute'),
          field('sql', $._expression),
          ',',
          field('parameters', $._expression),
          ';',
        ),
      ),

    // எண் வருவாய் = 100000;  — and a bare `எண் வருவாய்;`
    declaration: ($) =>
      seq(
        field('type', $.type),
        field('name', $.identifier),
        optional(seq('=', field('value', $._expression))),
        ';',
      ),

    // கடன் க = கடன்{…};  — a shape's name before a name — and நிலை x = 5;,
    // which has the same form.
    typed_declaration: ($) =>
      seq(
        field('type', $.identifier),
        field('name', $.identifier),
        optional(seq('=', field('value', $._expression))),
        ';',
      ),

    // நிலை எண் வரம்பு_ = 250000;  நிலை கடன் க = …;  நிலை செயல் f = …;
    fixed_declaration: ($) =>
      seq(
        field('keyword', $.identifier),
        field('type', choice($.type, $.function_type, $.identifier)),
        field('name', $.identifier),
        '=',
        field('value', $._expression),
        ';',
      ),

    // செயல் மாற்று = இரட்டி;  — a variable declared to hold a function.
    assignment: ($) =>
      seq(field('name', $.identifier), '=', field('value', $._expression), ';'),

    index_assignment: ($) =>
      seq(
        field('name', $.identifier),
        '[',
        field('index', $._expression),
        ']',
        '=',
        field('value', $._expression),
        ';',
      ),

    field_assignment: ($) =>
      seq(
        field('name', $.identifier),
        '.',
        field('field', $.identifier),
        '=',
        field('value', $._expression),
        ';',
      ),

    expression_statement: ($) => seq($._expression, ';'),

    block: ($) => seq('{', repeat($._statement), '}'),

    type: () =>
      choice(
        kw('IntegerType'),
        kw('FloatType'),
        kw('StringType'),
        kw('BoolType'),
        kw('TextType'),
        kw('ArrayType'),
        kw('DataType'),
        kw('ObjectType'),
        kw('DateType'),
      ),

    // --- Expressions ---------------------------------------------------

    _expression: ($) =>
      choice(
        $.logical_expression,
        $.unary_not,
        $.comparison_expression,
        $.binary_expression,
        $.unary_minus,
        $._postfix,
      ),

    logical_expression: ($) =>
      choice(
        prec.left('or', seq($._expression, kw('Or'), $._expression)),
        prec.left('and', seq($._expression, kw('And'), $._expression)),
      ),

    comparison_expression: ($) =>
      prec.left(
        'comparison',
        seq(
          field('left', $._expression),
          field('operator', choice('==', '!=', '<=', '>=', '<', '>')),
          field('right', $._expression),
        ),
      ),

    binary_expression: ($) =>
      choice(
        prec.left(
          'additive',
          seq(
            field('left', $._expression),
            // `&` concatenates; it is additive-level in this language.
            field('operator', choice('+', '-', '&')),
            field('right', $._expression),
          ),
        ),
        prec.left(
          'term',
          seq(
            field('left', $._expression),
            field('operator', choice('*', '/')),
            field('right', $._expression),
          ),
        ),
      ),

    _postfix: ($) =>
      choice(
        $.call,
        $.index,
        $.field_access,
        $.try_expression,
        $._primary,
      ),

    // `f(x)`, and a call of anything that gives a function: `f(1)(2)`,
    // `விதிகள்[0](x)`, and `க.வட்டி(2)` — a method, or a function a record
    // holds in that field.
    call: ($) =>
      prec(
        'postfix',
        seq(field('function', $._postfix), field('arguments', $.argument_list)),
      ),

    argument_list: ($) => seq('(', commaSep($._expression), ')'),

    index: ($) =>
      prec(
        'postfix',
        seq(field('base', $._postfix), '[', field('index', $._expression), ']'),
      ),

    field_access: ($) =>
      prec('postfix', seq(field('base', $._postfix), '.', field('field', $.identifier))),

    // `?` — unwrap a சரி, or hand the தவறு back to the caller.
    try_expression: ($) => prec('postfix', seq($._postfix, '?')),

    array: ($) => seq('[', commaSep($._expression), ']'),

    record: ($) => seq('{', commaSep($.pair), '}'),

    // செயல்(x) { திரும்பு x * 2; } — a function written where a value goes.
    lambda: ($) =>
      seq(
        kw('Function'),
        field('parameters', $.parameter_list),
        field('return_type', optional($._return_type)),
        field('body', $.block),
      ),

    // கடன்{அசல்: 100000, ..பழையது} — a record made as a declared shape.
    shape_literal: ($) =>
      seq(
        field('shape', $.identifier),
        '{',
        optional(
          choice(
            seq(commaSep1($.pair), optional(seq(',', $.spread))),
            $.spread,
          ),
        ),
        optional(','),
        '}',
      ),

    spread: ($) => seq('..', field('base', $._expression)),

    // A field name is data — what the author typed — so a quoted key and a
    // bare one mean the same thing and neither is a keyword.
    pair: ($) =>
      seq(field('key', choice($.identifier, $.string)), ':', field('value', $._expression)),

    // Every number is a fixed-point decimal, and a percentage literal is
    // exact: 18% is 0.18, never a rounded double.
    percentage: () => token(seq(/[0-9]+/, optional(seq('.', /[0-9]+/)), '%')),

    number: () => token(seq(/[0-9]+/, optional(seq('.', /[0-9]+/)))),

    // `token.immediate` on the contents is load-bearing. `extras` includes
    // whitespace, and tree-sitter inserts extras *between* the elements of a
    // seq — so with an ordinary regex here the newlines inside a multi-line
    // string were being skipped as whitespace rather than kept as text, and
    // every multi-line SQL literal in nUlakam failed to parse.
    string: ($) =>
      seq(
        '"',
        repeat(
          choice($.escape_sequence, $.invalid_escape, token.immediate(/[^"\\]+/)),
        ),
        token.immediate('"'),
      ),

    // The five the compiler decodes.
    escape_sequence: () => token.immediate(/\\[ntr"\\]/),

    // Anything else keeps both characters rather than being an escape, which
    // is worth showing as different from the ones that are.
    identifier: () => token(IDENT),
  },
});
