tree-sitter-etamil/test/corpus/statements.txt
================================================================================
A declaration in Tamil script
================================================================================

எண் வருவாய் = 100000;

--------------------------------------------------------------------------------

(source_file
  (declaration
    type: (type)
    name: (identifier)
    value: (number)))

================================================================================
The same declaration romanized
================================================================================

eN varuvAy = 100000;

--------------------------------------------------------------------------------

(source_file
  (declaration
    type: (type)
    name: (identifier)
    value: (number)))

================================================================================
A declaration with no initializer
================================================================================

எண் வருவாய்;

--------------------------------------------------------------------------------

(source_file
  (declaration
    type: (type)
    name: (identifier)))

================================================================================
The condition comes before the keyword
================================================================================

(வருவாய் > 800000) எனில் {
    அச்சு "High";
}
இன்றேல் {
    அச்சு "Low";
}

--------------------------------------------------------------------------------

(source_file
  (if_statement
    condition: (comparison_expression
      left: (identifier)
      right: (number))
    consequence: (block
      (print_statement
        value: (string)))
    alternative: (block
      (print_statement
        value: (string)))))

================================================================================
A while loop
================================================================================

(எண்ணி < 10) சுற்று {
    எண்ணி = எண்ணி + 1;
}

--------------------------------------------------------------------------------

(source_file
  (while_statement
    condition: (comparison_expression
      left: (identifier)
      right: (number))
    body: (block
      (assignment
        name: (identifier)
        value: (binary_expression
          left: (identifier)
          right: (number))))))

================================================================================
Iteration
================================================================================

ஒவ்வொரு உறுப்பு இல் பட்டியல் {
    அச்சு உறுப்பு;
}

--------------------------------------------------------------------------------

(source_file
  (for_each_statement
    variable: (identifier)
    collection: (identifier)
    body: (block
      (print_statement
        value: (identifier)))))

================================================================================
A function with a declared signature
================================================================================

செயல் வரி(எண் தொகை) எண் {
    திரும்பு தொகை * 18%;
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_list
      (parameter
        type: (type)
        name: (identifier)))
    return_type: (type)
    body: (block
      (return_statement
        value: (binary_expression
          left: (identifier)
          right: (percentage))))))

================================================================================
A function with no declared types
================================================================================

செயல் இரட்டை(எ) {
    திரும்பு எ * 2;
}

--------------------------------------------------------------------------------

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_list
      (parameter
        name: (identifier)))
    body: (block
      (return_statement
        value: (binary_expression
          left: (identifier)
          right: (number))))))

================================================================================
An import
================================================================================

இறக்கு "nUlakam/paNam.qmz";

--------------------------------------------------------------------------------

(source_file
  (import_statement
    path: (string)))

================================================================================
Index assignment, which needs a GLR conflict to parse
================================================================================

வரிசை[0] = 5;

--------------------------------------------------------------------------------

(source_file
  (index_assignment
    name: (identifier)
    index: (number)
    value: (number)))

================================================================================
An index expression, the other reading of the same prefix
================================================================================

அச்சு வரிசை[0];

--------------------------------------------------------------------------------

(source_file
  (print_statement
    value: (index
      base: (identifier)
      index: (number))))

================================================================================
Field assignment
================================================================================

பதிவு.பெயர் = "ravi";

--------------------------------------------------------------------------------

(source_file
  (field_assignment
    name: (identifier)
    field: (identifier)
    value: (string)))

================================================================================
An HTTP route
================================================================================

வழி பெறு, "/kaNakku/:id" {
    பதில் 200, "ok";
}

--------------------------------------------------------------------------------

(source_file
  (route_statement
    method: (http_method)
    path: (string)
    handler: (block
      (response_statement
        status: (number)
        body: (string)))))

================================================================================
A response with headers
================================================================================

பதில் 200, உடல்_உரை, {"Content-Type": "text/html"};

--------------------------------------------------------------------------------

(source_file
  (response_statement
    status: (number)
    body: (identifier)
    headers: (record
      (pair
        key: (string)
        value: (string)))))
